# cv-enhancer-gen-ai

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
agents/cv_enhancer/: agent.py
agents/cv_enhancer/sub_agents/job_offer_summarizer/: __init__.py  agent.py  prompt.py  schemas.py
agents/cv_enhancer/sub_agents/writer/: __init__.py  agent.py  prompt.py
agents/cv_loader/: agent.py  prompt.py
agents/cv_loader/schemas/json_resume/: __init__.py  awards.py  certificates.py  education.py  interests.py  json_resume.py  languages.py  projects.py  publications.py  references.py  skills.py  volunteer.py  work.py
agents/cv_saver/: agent.py  config.py  tools.py
agents/cv_saver/schemas/: __init__.py
agents/cv_saver/schemas/json_resume/: json_resume.py  languages.py  references.py  work.py
agents/cv_saver/sub_agents/stack_adder/: agent.py
agents/schemas/json_resume/: certificates.py  education.py  skills.py  volunteer.py
agents/schemas/json_resume/basics/: location.py
app/: streamlit_app.py
data/: json_resume_es_example.json  json_resume_example.json
notebooks/: 01-cv-enhancer-prototype.ipynb
src/cv_enhancer/schemas/: schemas_utils.py
src/cv_enhancer/schemas/json_resume/: __init__.py  _abc.py  _interfaces.py  awards.py  certificates.py  education.py  interests.py  json_resume.py  languages.py  (+6 more)
src/schemas/: schemas_utils.py
src/schemas/json_resume/: awards.py  certificates.py  education.py  interests.py  interface_essential.py  json_resume.py  languages.py  projects.py  publications.py  references.py  skills.py  volunteer.py  work.py
(+11 files in other folders)
